New folder/acceler/final_workspace/.metadata/.plugins/org.eclipse.cdt.ui/final_app.build.log
23:05:14 **** Incremental Build of configuration Nios II for project final_app ****
make all 
Info: Building ../final_app_bsp/
C:/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../final_app_bsp/
[BSP build complete]
Info: Compiling main.c to obj/default/main.o
nios2-elf-gcc -xc -MP -MMD -c -I../final_app_bsp//HAL/inc -I../final_app_bsp/ -I../final_app_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED    -O0 -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/main.o main.c
main.c: In function 'setKeycode':
main.c:134:9: warning: format '%x' expects argument of type 'unsigned int', but argument 2 has type 'alt_u32 {aka long unsigned int}' [-Wformat=]
  printf("\n The key in hex: %x \n", keycode);
         ^
main.c:134:9: warning: format '%x' expects argument of type 'unsigned int', but argument 2 has type 'alt_u32 {aka long unsigned int}' [-Wformat=]
main.c: In function 'main':
main.c:167:3: error: invalid use of void expression
   IOWR_ALTERA_AVALON_PIO_DATA(0x170, srand(seed));
   ^
main.c:153:26: warning: unused variable 'random_num' [-Wunused-variable]
  volatile unsigned int * random_num = (unsigned int *) 0x170;
                          ^
main.c:144:7: warning: unused variable 'keycode' [-Wunused-variable]
  WORD keycode;
       ^
make: *** [obj/default/main.o] Error 1

23:05:15 Build Finished (took 1s.38ms)

